ui/data-table/index.module.css
.root {
  width: 100%;
}

.root :global .MuiTableBody-root {
  border: 1px solid rgba(224, 224, 224, 1);
}

.root :global .MuiTableBody-root .MuiTableRow-root:nth-of-type(odd) {
  background-color: white;
}

.root :global .MuiTableBody-root .MuiTableRow-root:nth-of-type(odd) {
  background-color: rgba(224, 224, 224, 0.3);
}

.root :global .MuiOutlinedInput-root fieldset {
  border: none;
  outline: none
}

.root :global .MuiTableCell-root.MuiTableCell-body {
  padding-left: 0;
}

